<resources>
    <string name="app_name">uReflect</string>
    <string name="api_parse_error">Bad server response</string>
    <string name="generic_error">Something happened…</string>
    <string name="file_error">Could not create file</string>
    <string name="no_photo_error">Please take a photo</string>
    <string name="facial_no_camera_error">A camera is required</string>
    <string name="register_btn_text">Meet my reflection</string>
    <string name="configure_btn_text">Configure</string>
    <string name="skip_step_btn_text">Skip this step</string>
    <string name="ok_btn_text">OK</string>
    <string name="next_btn_text">Next</string>
    <string name="finish_btn_text">Finish</string>
    <string name="logout_btn_text">Sign out</string>
    <string name="next_step_btn_text">Next step</string>
    <string name="update_btn_text">Update</string>
    <string name="signin_btn_text">Met it already, sign in</string>
    <string name="signin_login_btn_text">Login</string>
    <string name="signin_forgot_password_btn_text">Forgot password ?</string>
    <string name="signin_title_text">We know each other, right ?</string>
    <string name="signup_identity_title_text">Hi, you are ?</string>
    <string name="signup_credentials_title_text">Just need your email !</string>
    <string name="home_title_text">Hi, %1$s</string>
    <string name="form_text_email">Email</string>
    <string name="form_text_password">Password</string>
    <string name="form_text_first_name">First name</string>
    <string name="form_text_last_name">Last name</string>
    <string name="form_text_name">Name</string>
    <string name="form_text_location">Location</string>
    <string name="form_text_location_bathroom">Bathroom</string>
    <string name="form_error_email_required">Email required</string>
    <string name="form_error_email_incorrect">Incorrect email</string>
    <string name="form_error_password_required">Password required</string>
    <string name="form_error_first_name_required">First name required</string>
    <string name="form_error_last_name_required">Last name required</string>
    <string name="form_error_name_required">Name required</string>
    <string name="form_error_location_required">Location required</string>
    <string name="form_error_code_too_short">Code must be complete</string>
    <string name="home_mirrors_text">Your mirrors</string>
    <string name="home_add_mirror_text">New Mirror</string>
    <string name="new_mirror_name_title_text">Name of your new mirror ?</string>
    <string name="new_mirror_location_title_text">Where is it located ?</string>
    <string name="new_mirror_code_title_text">What code is displayed on your mirror ?</string>
    <string name="new_profile_name_title_text">Registration</string>
    <string name="new_profile_name_child_account_text">Child account</string>
    <string name="new_profile_facial_msg_title_text">Facial recognition</string>
    <string name="new_profile_facial_msg_content_text">As a way to assure you full comfort, the facial recognition will open your profile as soon as you step into the room. It it however optional.</string>
    <string name="new_profile_completed_title_text">Registration completed !</string>
    <string name="new_profile_pin_title_text">Setup your pin code</string>
    <string name="new_profile_confirm_pin_title_text">Confirm your pin code</string>
    <string name="form_text_go">Let\'s go !</string>
    <string name="retry">Retry</string>
    <string name="logo">Logo</string>
    <string name="smile_text">Smile !</string>
    <string name="angry_text">Be angry.</string>
    <string name="neutral_text">Be neutral.</string>
    <string name="neutral_left_text">Be neutral and slightly turn your face to your left.</string>
    <string name="neutral_right_text">Be neutral and slightly turn your face to your right.</string>
    <string name="mirror_profiles_text">Profiles</string>
    <string name="mirror_modules_text">Modules</string>
    <string name="mirror_devices_text">Connected devices</string>
    <string name="profile_title_text">Profile</string>
    <string name="profile_security_text">Security</string>
    <string name="profile_facial_text">Facial recognition</string>
    <string name="profile_pin_text">Pin code</string>
    <string name="profile_delete_text">Delete the profile</string>
    <string name="confirmation_text">Are you sure ?</string>
    <string name="profile_confirmation_text">The profile will be deleted.</string>
    <string name="new_profile_pin_match_error">The pins do not match</string>
    <string name="success_text">Success !</string>
    <string name="new_profile_pin_title_check_text">Enter PIN</string>
    <string name="form_text_timezone">Timezone</string>
    <string name="mirror_title_text">Mirror</string>
    <string name="mirror_delete_text">Delete the mirror</string>
    <string name="mirror_confirmation_text">The mirror will be deleted.</string>
    <string name="settings_title_text">Settings</string>
    <string name="form_text_payment">Payment methods</string>
    <string name="card_visa_text">VISA Card *%1$s</string>
    <string name="card_mastercard_text">Mastercard *%1$s</string>
    <string name="card_amex_text">AMEX *%1$s</string>
    <string name="card_discover_text">Discover *%1$s</string>
    <string name="card_jcb_text">JCB *%1$s</string>
    <string name="card_diners_text">Diners Club *%1$s</string>
    <string name="card_other_text">Other *%1$s</string>
    <string name="internet_error">Check your internet connection</string>
    <string name="invalid_card_error">Could not validate card</string>
    <string name="store_title_text">Store</string>
    <string name="install_btn_text">Install</string>
    <string name="form_text_search_module">Search an app</string>
    <string name="module_comments_text">Comments</string>
    <string name="text_no_results">No results</string>
    <plurals name="module_ratings_text">
        <item quantity="one">%1$d rating</item>
        <item quantity="other">%1$d ratings</item>
    </plurals>
    <string name="module_description_text">Description</string>
    <string name="module_price_text">%1$s €</string>
    <string name="free_text">Free</string>
    <string name="module_rating_text">Rating</string>
    <string name="rate_btn_text">Rate</string>
    <string name="module_rate_text">Rate this module</string>
    <string name="module_rate_update_text">Update your rating</string>
    <string name="pair_device_title_text">Pairing</string>
    <string name="not_implemented_error">Feature unavailable for your current application version</string>
    <string name="need_profile_error">At least one profile is needed to install modules</string>
    <string name="uninstall_btn_text">Uninstall</string>
    <string name="check_email_text">We just sent you an email to reinitialize your password</string>
    <string name="check_email_change_text">We just sent an email to your new address to confirm it</string>
    <string name="cancel_btn_text">Cancel</string>
    <string name="module_comment_text">Comment</string>
    <string name="enter_comment_text">Enter comment</string>
    <string name="enter_email_text">Enter your email</string>
    <string name="logo_text">Logo</string>
    <string name="form_error_password_too_short">Password must contain at least 6 characters</string>
    <string name="bluetooth_text">Bluetooth</string>
    <string name="no_bluetooth_text">No bluetooth devices</string>
    <string name="pairing_info_text">Informations</string>
    <string name="device_confirmation_text">The connected device will be deleted</string>
    <string name="device_delete_text">Delete the device</string>
    <string name="device_title_text">Connected device</string>
    <string name="email_taken_error">This email is already used</string>
    <string name="dismiss_text">Dismiss</string>
</resources>