<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_vertical"
            android:text="@string/new_profile_facial_msg_title_text"
            android:textAlignment="center"
            android:textColor="@color/colorTitle"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_vertical"
            android:text="@string/new_profile_facial_msg_content_text"
            android:textColor="@color/colorText"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnConfigure"
        android:layout_width="wrap_content"
        android:minWidth="@dimen/button_min"
        android:layout_height="48dp"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorPrimary"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/configure_btn_text"
        android:textColor="@color/colorText"
        app:layout_anchor="@id/btnSkip"
        app:layout_anchorGravity="top|center_horizontal" />

    <Button
        android:id="@+id/btnSkip"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/skip_step_btn_text"
        android:textColor="@color/colorText" />
</android.support.design.widget.CoordinatorLayout>