<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:paddingTop="16dp"
    tools:context=".activities.Mirror">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/profile_title_text"
            android:textAlignment="gravity"
            android:textColor="@color/colorTitle"
            android:textSize="30sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/evNameLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/evName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_text_name"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorText" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/profile_security_text"
            android:textAlignment="gravity"
            android:textAllCaps="true"
            android:textColor="@color/colorTitle"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/profile_facial_text"
                android:textAlignment="gravity"
                android:textColor="@color/colorTitle"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorText"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/profile_pin_text"
                android:textAlignment="gravity"
                android:textColor="@color/colorTitle"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/profile_delete_text"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_anchor="@id/btnContainer"
        app:layout_anchorGravity="top|start" />

    <LinearLayout
        android:id="@+id/btnContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:orientation="vertical"
        android:paddingTop="24dp">

        <Button
            android:id="@+id/btn"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:background="@color/colorPrimary"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/ok_btn_text"
            android:textColor="@color/colorText" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>