<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/logo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:elevation="12dp"
            app:cardCornerRadius="30dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:contentDescription="@string/logo"
                android:scaleType="centerCrop"
                android:src="@drawable/logo" />
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_vertical"
            android:text="@string/new_mirror_name_title_text"
            android:textAlignment="center"
            android:textColor="@color/colorTitle"
            android:textSize="20sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/evNameLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/evName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_text_name"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorText" />

        </android.support.design.widget.TextInputLayout>

        <io.ureflect.app.utils.AnimatedButton
            android:id="@+id/btn"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:background="@color/colorPrimary"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/ok_btn_text"
            android:textColor="@color/colorText" />

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>