<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_vertical"
        android:textAlignment="center"
        android:text="@string/new_mirror_location_title_text"
        android:textColor="@color/colorText"
        android:textSize="20sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/evLocationLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/evLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_text_location"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorText" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="end"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimary"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/ok_btn_text"
        android:textColor="@color/colorText" />

</LinearLayout>