<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_vertical"
            android:text="@string/new_profile_name_title_text"
            android:textAlignment="center"
            android:textColor="@color/colorTitle"
            android:textSize="20sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/evNameLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/evName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_text_name"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorText" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_profile_name_child_account_text"
                android:textColor="@color/colorText"
                android:textSize="18sp" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="24dp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimary"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/next_btn_text"
        android:textColor="@color/colorText" />

</android.support.design.widget.CoordinatorLayout>