<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/flFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:paddingTop="16dp"
    tools:context=".activities.EditProfile">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/mirror_title_text"
                    android:textAlignment="gravity"
                    android:textColor="@color/colorTitle"
                    android:textSize="30sp" />

                <ProgressBar
                    android:id="@+id/loading"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/colorPrimary"
                    android:visibility="gone" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/evProfileTitleLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/evProfileTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/form_text_name"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorText" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/profile_security_text"
                android:textAlignment="gravity"
                android:textAllCaps="true"
                android:textColor="@color/colorTitle"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvFacial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawableEnd="@drawable/ic_keyboard_arrow_right"
                android:gravity="center_vertical"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/profile_facial_text"
                android:textAlignment="gravity"
                android:textColor="@color/colorTitle"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorText" />

            <TextView
                android:id="@+id/tvPin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawableEnd="@drawable/ic_keyboard_arrow_right"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/profile_pin_text"
                android:textAlignment="gravity"
                android:textColor="@color/colorTitle"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            app:layout_behavior="io.ureflect.app.ui.MoveUpwardBehavior">

            <TextView
                android:id="@+id/tvDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/profile_delete_text"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                app:layout_anchor="@id/btnContainer"
                app:layout_anchorGravity="top|start" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <io.ureflect.app.ui.AnimatedButton
                android:id="@+id/btn"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="end"
                android:layout_marginEnd="8dp"
                android:background="@color/colorPrimary"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/update_btn_text"
                android:textColor="@color/colorText" />
        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>

</FrameLayout>